fix footer gaps and alignments

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -533,6 +533,11 @@
       margin-top: calc(var(--spacing) * 14.25);
     }
   }
+  .lg\:ml-auto {
+    @media (width >= 64rem) {
+      margin-left: auto;
+    }
+  }
   .lg\:block {
     @media (width >= 64rem) {
       display: block;
@@ -553,6 +558,11 @@
       max-width: calc(var(--spacing) * 88.75);
     }
   }
+  .lg\:max-w-111\.25 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 111.25);
+    }
+  }
   .lg\:max-w-373 {
     @media (width >= 64rem) {
       max-width: calc(var(--spacing) * 373);
@@ -571,6 +581,11 @@
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
+    }
+  }
+  .lg\:items-start {
+    @media (width >= 64rem) {
+      align-items: flex-start;
     }
   }
   .lg\:justify-between {
